fix messages (accountcount), css spacing

--- a/src/Opportunity.css
+++ b/src/Opportunity.css
@@ -26,7 +26,7 @@ th {
 }
 td {
     border-top: 1px solid black;
-    padding: 6px 0px 6px;
+    padding: 6px 0px 4px;
     text-align: center;
     font-weight: 600;
     font-size: max(1.6vh, 14px);
@@ -43,7 +43,7 @@ td {
     height: 7vh;
     border-radius: 50%;
     overflow: none;
-    margin: auto 10px auto 3px;
+    margin: auto 1.25vw auto 3px;
 }
 .buttons-div {
     display: flex;
